Upgrade to Java 17 (from 15) in the base